--- a/config/config.env
+++ b/config/config.env
@@ -1,6 +1,6 @@
 PORT = 4000
 RAZORPAY_API_KEY = "rzp_test_TSzPceeSP97hL8"
 RAZORPAY_API_SECRET = "tVtkQXIFuj9lfyvQJmniB8eP"
-Mongo_URI = mongodb+srv://SharkTankIndia:Sharktankindia@cluster0.3k4kznv.mongodb.net/?retryWrites=true
+Mongo_URI = mongodb+srv://nullpointer:welcometocode@cluster0.0oade.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET= afassgvdxbgnnghdfdbcvbcbdgdshkgd
 NODE_ENV = 
